# flighty

./: CONTRIBUTING.md  Cargo.toml  README.md
benches/: time_loop_bench.rs
data/: geomag.csv
src/: lib.rs  models.rs  planet.rs  sensors.rs  simulato.rs
src/physical_types/: mod.rs  raw_types.rs
tests/: vehicle_e2e_tests.rs
