[package]
name = "flighty"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.17.2"
sensulator = "0.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.6.5"
quickcheck = "0.6"


[dependencies.num]
version = "0.2"
default-features = false

