[package]
name = "flighty"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/flighty"
description = "Simple physical flight simulator"
edition = "2018"

[dependencies]
nalgebra = "0.17.2"
#sensulator = "0.4"

[dev-dependencies]
criterion = "0.2"
assert_approx_eq = "1.1.0"
rand = "0.6.5"
quickcheck = "0.6"


[dependencies.sensulator]
#path = "../sensulator"
git = "https://github.com/tstellanova/sensulator.git"

[dependencies.num]
version = "0.2"
default-features = false


[[bench]]
name = "time_loop_bench"
harness = false
