[package]
name = "flighty"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/flighty"
description = "Simple physical flight simulator"
build = "build/main.rs"
edition = "2018"

[dependencies]
nalgebra = "0.17.2"
sensulator = "0.4.2"
rstar = { version = "0.3.0", features = ["serde"] }
serde = "1.0.90"
serde_json = "1.0"
lazy_static = "1.2.0"


[dev-dependencies]
criterion = "0.2"
assert_approx_eq = "1.1.0"
rand = "0.6.5"
quickcheck = "0.6"


[build-dependencies]
nalgebra = "0.17.2"
rustfmt = "0.9"
csv = "1.0"
rstar = { version = "0.3.0", features = ["serde"] }
serde = "1.0.90"
serde_json = "1.0"



#[dependencies.sensulator]
#path = "../sensulator"
#git = "https://github.com/tstellanova/sensulator.git"

[dependencies.num]
version = "0.2"
default-features = false



[[bench]]
name = "time_loop_bench"
harness = false
